crates/graphql-schema-validation/tests/validation_errors/errors@input_objects_nonempty.snap
---
source: crates/graphql-schema-validation/tests/validation_tests.rs
expression: displayed
input_file: crates/graphql-schema-validation/tests/validation_errors/input_objects_nonempty.graphql
---
  × Syntax error:  --> 1:18
  │   |
  │ 1 | input AlsoEmpty {}
  │   |                  ^---
  │   |
  │   = expected input_value_definition
